@@ -594,7 +594,7 @@ bool CGUIMediaWindow::OnClick(int iItem)
   {
     m_iSelectedItem = m_viewControl.GetSelectedItem();
 
-    if (pItem->IsPlayList())
+    if (!g_advancedSettings.m_playlistAsFolders && pItem->IsPlayList())
     {
       CStdString strPath=pItem->m_strPath;
       LoadPlayList(pItem->m_strPath);
